splunk/depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
  namespace: splunk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      imagePullSecrets:
        - name: harbor-regcred
      containers:
      - name: splunk
        image: harbor.hellfireengineer.tech/splunk-team/splunk-test:test
        ports:
          - containerPort: 8000 # Splunk Web UI
          - containerPort: 8089 # Management API
          - containerPort: 9997 # Data ingestion
        volumeMounts:
          - mountPath: /opt/splunk/var
            name: splunk-data-50
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 90
          timeoutSeconds: 5
      volumes:
      - name: splunk-data-50
        persistentVolumeClaim:
          claimName: splunk-data-50
