splunk/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: splunk
spec:
  type: NodePort
  selector:
    app: splunk
  ports:
    - name: web
      port: 8000
      targetPort: 8000
    - name: mgmt
      port: 8089
      targetPort: 8089
    - name: ingest
      port: 9997
      targetPort: 9997
