splunk/splunk-hec-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splunk-hec
  namespace: splunk
spec:
  type: ClusterIP
  selector:
    app: splunk
  ports:
    - name: hec
      port: 8088
      targetPort: 8088
      protocol: TCP
